[tool.poetry]
name = "repl_pygame_ch-10-lab-laurenstiefel"
version = "0.1.0"
description = ""
authors = ["Lauren-HH <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
pygame = "^2.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
